# auto-md

./: .gitignore  DTS-6038.md  README.md  prompts.text  pyproject.toml
example/: DTS-5794_2025-03-31.md  DTS-5795_2025-03-31.md
src/auto_md/: __init__.py  ai_utils.py  cli.py  config.py  git_utils.py  jira_api.py
