[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-md"
version = "0.1.0"
description = "CLI小程序"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "langchain-core>=0.1.0",
    "pydantic>=2.0.0",
]

[project.scripts]
auto-md = "auto_md.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_md"] 